fixed spacing on main menu and movesMenu to be evenly spaced and to keep things in a 2 x 2 grid. Changed the PKMN menu items to buttons so that the curser would show up when they are hovered over.

--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -20,12 +20,38 @@
 
 .sprite {
     width: 20px;
+    margin-right: 5px;
 }
 
 .partyItem {
     display: flex;
     align-items: center;
+    margin: 5px;
 }
 .back {
     float: right;
+}
+
+.movesMenu {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.attack {
+    display: flex;
+    flex-basis: calc(50% - 30px);
+    justify-content: center;
+    flex-direction: column;
+    margin: 10px;
+}
+
+.mainMenu {
+    max-width: 250px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.menuButtons {
+    margin: 10px;
 }
